Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/InvalidChar2.ru
/? Error Léxico, char inválido
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/?| Linea 4 | COLUMNA 3 | ERROR EN LA DEFINICION DEL CARACTER: CARACTER NO VALIDO '\0'
'\0'